💡 Update indentation settings in .editorconfig
Adjusted the indent_size value from 2 to 4 in the .editorconfig file to maintain consistent code formatting and improve code readability.

💡 Modify installation instructions in README.md

Updated the installation instructions in the README.md file to provide clearer steps for setting up the project. This includes creating and activating a virtual environment, installing the required dependencies, and running the installation script to install Electrum.

💡 Update configuration details in config.ini

Changed the MySQL database connection details in the config.ini file to reflect the new test environment. Updated the host, user, password, and database values accordingly.

💡 Adjust requirements in requirements.txt

Modified the requirements.txt file to include the mysql-connector-python package as a dependency for the project.

These changes were made to enhance the project's development environment, installation process, and configuration settings, ensuring smooth setup and execution of the project.

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,12 @@
 [mysql]
 host=db4free.net
-user=bitelectrum
-password=bitelectrum
-database=bitelectrum
+user=testbitcelectrum
+password=testbitcelectrum
+database=testbitcelectrum
 
 [settings]
 delay=600
+
+[electrum]
+password=123456
+testnetwork=true
